package B3;

public abstract class widget {
    public abstract String show();
}
